--- a/app/assets/stylesheets/feedback_subjects.css.sass
+++ b/app/assets/stylesheets/feedback_subjects.css.sass
@@ -1,3 +1,22 @@
-// Place all the styles related to the feedback_subjects controller here.
-// They will automatically be included in application.css.
-// You can use Sass here: http://sass-lang.com/
+table
+  border-width: 0
+  border-style: none
+  border-color: #0000ff
+  border-collapse: collapse
+  height: 330px
+  width: 330px
+  margin: 50px
+
+td
+  border-width: 0
+  border-style: none
+  border-color: #0000ff
+  border-collapse: collapse
+  padding: 0
+  margin: 0
+  width: 10px
+  height: 10px
+  &.black
+    background-color: #000
+  &.white
+    background-color: #fff
