Remove Active Admin, add Groundwork

--- a/app/views/feedback_subjects/show.html.haml
+++ b/app/views/feedback_subjects/show.html.haml
@@ -8,7 +8,7 @@
 \|
 = link_to 'Back', feedback_subjects_path
 
-%table
+%table.qr
   - @qr.modules.each_index do |x|
     %tr
       - @qr.modules.each_index do |y|
