--- a/app/assets/stylesheets/feedback_subjects.css.sass
+++ b/app/assets/stylesheets/feedback_subjects.css.sass
@@ -1,22 +1,21 @@
-table
+table.qr
   border-width: 0
   border-style: none
   border-color: #0000ff
   border-collapse: collapse
   height: 330px
   width: 330px
-  margin: 50px
 
-td
-  border-width: 0
-  border-style: none
-  border-color: #0000ff
-  border-collapse: collapse
-  padding: 0
-  margin: 0
-  width: 10px
-  height: 10px
-  &.black
-    background-color: #000
-  &.white
-    background-color: #fff
+  td
+    border-width: 0
+    border-style: none
+    border-color: #0000ff
+    border-collapse: collapse
+    padding: 0
+    margin: 0
+    width: 10px
+    height: 10px
+    &.black
+      background-color: #000
+    &.white
+      background-color: #fff
