--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,5 +5,12 @@
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
+    %meta{content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
+    %meta{content: "width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1", name: "viewport"}/
+    = stylesheet_link_tag("application", :media => "screen")
+    /[if IE]
+      <link type="text/css" rel="stylesheet" href="/assets/groundworkcss/groundwork-ie.css">
+    = javascript_include_tag("application")
   %body
-    = yield
+    .row.padded.double
+      = yield
