Improve CRUD for feedback subjects

--- a/app/views/feedback_subjects/_form.html.haml
+++ b/app/views/feedback_subjects/_form.html.haml
@@ -9,5 +9,8 @@
   .field
     = f.label :name
     = f.text_field :name
+
+    = f.label :yes_no_question, "Yes/No Question"
+    = f.text_field :yes_no_question
   .actions
     = f.submit 'Save'
