--- a/app/views/feedback_subjects/edit.html.haml
+++ b/app/views/feedback_subjects/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing feedback_subject
+%h1 Editing your product's details
 
 = render 'form'
 
-= link_to 'Show', @feedback_subject
-\|
 = link_to 'Back', feedback_subjects_path
