--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -1,3 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Rouge+Script);
+@import 'groundwork_settings';
+@import 'groundworkcss/groundwork';
 @import 'settings';
 @import 'jquery.mobile';
+@import 'mobile_header';
