User can input feedback and BP can see it

--- a/app/assets/stylesheets/site_header.sass
+++ b/app/assets/stylesheets/site_header.sass
@@ -1,8 +1,9 @@
 .site-header
   background-color: $primary
   color: white
+  text-shadow: 1px 1px #000
   span
-    font-size: 55px
+    font-size: 60px
     font-family: 'Rouge Script', cursive
   i
     font-size: 40px
