--- a/app/views/layouts/mobile.html.haml
+++ b/app/views/layouts/mobile.html.haml
@@ -16,6 +16,9 @@
       %div{"data-role" => "header"}
         = render :partial => 'layouts/mobile_header'
       %div{"data-role" => "content"}
-        Thank You!
+        %b
+          Got it, thank you for giving us feedback! 
+        %p.gap-top
+          We're always trying to make our product better and your input is invaluable.
     = javascript_include_tag("mobile")
 
