--- a/app/views/feedback_subjects/show.html.haml
+++ b/app/views/feedback_subjects/show.html.haml
@@ -1,22 +1,34 @@
-%p#notice= notice
+.row.whole
+  %p#notice= notice
 
-%p
-  %b Name:
-  = @feedback_subject.name
-%p
-  %b The question you're asking your users:
-  = @feedback_subject.yes_no_question
+  %h1
+    = @feedback_subject.name
+  %p
+    = @feedback_subject.yes_no_question
 
-%h3 Your product's QR code
+  %table.qr
+    - @qr.modules.each_index do |x|
+      %tr
+        - @qr.modules.each_index do |y|
+          - if @qr.dark?(x,y)
+            %td.black
+          - else
+            %td.white
 
-%table.qr
-  - @qr.modules.each_index do |x|
-    %tr
-      - @qr.modules.each_index do |y|
-        - if @qr.dark?(x,y)
-          %td.black
-        - else
-          %td.white
+  %h2
+    Feedback so far
+  %table
+    %thead
+      %th
+        answer
+      %th
+        message
+    - @feedback_subject.feedbacks.each do | feedback |
+      %tr
+        %td
+          = feedback.yes ? "yes" : "no"
+        %td
+          = feedback.message
 
 = link_to 'Edit', edit_feedback_subject_path(@feedback_subject)
 \|
