--- a/app/assets/stylesheets/feedback_subjects.css.sass
+++ b/app/assets/stylesheets/feedback_subjects.css.sass
@@ -20,3 +20,8 @@ table.qr
       background-color: #000
     &.white
       background-color: #fff
+
+canvas
+  margin: 30px auto
+.align-center
+  text-align: center
